Minima-like Structure and New Layouts
Using content from Jekyll's default theme, minima. Base includes like "head" and base layouts like "default". Some minor edits have been made to the default states of these files.

Have excluded some of the more "production-ready" includes like google-analytics.html because my current purpose is developing the visual layout and basic content, as opposed to a fully fledged functional website with SEO.

Also added llc-home, llc-base, blog-home and blog-base which are all new layouts taken from a private repository of mine.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,35 @@
-<nav>
-  <hr />
-  <p>Copyright Ryan Branch 2020<p>
-</nav>
+<footer class="site-footer h-card">
+  <data class="u-url" href="{{ "/" | relative_url }}"></data>
+
+  <div class="wrapper">
+
+    <h2 class="footer-heading">site title placeholder</h2>
+
+    <div class="footer-col-wrapper">
+      <div class="footer-col footer-col-1">
+        <ul class="contact-list">
+          <li class="p-name">
+            {%- if site.author -%}
+              site author placeholder
+            {%- else -%}
+              site title placeholder
+            {%- endif -%}
+            </li>
+            {%- if site.email -%}
+            <li><a class="u-email" href="mailto:site@email.placeholder">site.email placeholder</a></li>
+            {%- endif -%}
+        </ul>
+      </div>
+
+      <div class="footer-col footer-col-2">
+        social include placeholder
+      </div>
+
+      <div class="footer-col footer-col-3">
+        <p>placeholder spot for a site description or something similar</p>
+      </div>
+    </div>
+
+  </div>
+
+</footer>
