--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -5,6 +5,10 @@
     <title>{{ page.title }}</title>
   </head>
   <body>
+	{%- if page.title -%}
+      <h1 class="page-heading">{{ page.title }}</h1>
+	  <hr />
+    {%- endif -%}
     {{ content }}
 	{% include footer.html %}
   </body>
