--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,4 +8,7 @@
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
     {%- include google-analytics.html -%}
   {%- endif -%}
+  {%- if site.google_fonts == true -%}
+    {%- include google-fonts.html -%}
+  {%- endif -%}
 </head>
