--- a/_sass/jekyanbranch/_layout.scss
+++ b/_sass/jekyanbranch/_layout.scss
@@ -148,6 +148,12 @@
   @extend %clearfix;
 }
 
+.footer-col-hr {
+  border: 0.5px solid $grey-color-light;
+  margin-bottom: $spacing-unit / 2;
+  padding-left: $spacing-unit / 2;
+}
+
 .footer-col {
   float: left;
   margin-bottom: $spacing-unit / 2;
