--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -2,6 +2,17 @@
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    {%- seo -%}
+    <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
+    {%- feed_meta -%}
+    {%- if jekyll.environment == 'production' and site.google_analytics -%}
+      {%- include google-analytics.html -%}
+    {%- endif -%}
+    {%- if site.google_fonts == true -%}
+      {%- include google-fonts.html -%}
+    {%- endif -%}
     <title>{{ page.title }}</title>
   </head>
   <body>
