--- a/_sass/jekyanbranch/_layout.scss
+++ b/_sass/jekyanbranch/_layout.scss
@@ -118,6 +118,7 @@
 
 //Edited from Minima
 .footer-heading {
+  text-align: center;
   @include relative-font-size(1.125);
   margin-bottom: $spacing-unit / 2;
   color: $text-color;
