--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,7 +25,7 @@
           {%- endfor -%}
           {%- for path in page_paths -%}
             {%- assign my_page = site.pages | where: "path", path | first -%}
-            {%- if my_page.title == "About" or my_page.title == "Blog" or my_page.title == "Portfolio" -%}
+            {%- if my_page.title == "About" or my_page.title == "Blog" -%}
             <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
             {%- endif -%}
           {%- endfor -%}
