--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,4 @@
+
 <header class="site-header" role="banner">
 
   <div class="wrapper">
@@ -25,7 +26,7 @@
           {%- endfor -%}
           {%- for path in page_paths -%}
             {%- assign my_page = site.pages | where: "path", path | first -%}
-            {%- if my_page.title == "About" or my_page.title == "Blog" -%}
+            {%- if my_page.title == "About" or my_page.title == "Blog" or my_page.title == "Portfolio" -%}
             <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
             {%- endif -%}
           {%- endfor -%}
