--- a/_layouts/hardware-project.html
+++ b/_layouts/hardware-project.html
@@ -8,6 +8,6 @@ layout: default
         {{ content }}
     {%- else -%}
         <p class="post-list-heading">page.page-types: {{- page.page-types -}}</p>
-        <h3>WARNING: The "hardware-project" layout is being used but page.type is not equal to "hardware".</h3>
+        <h3>WARNING: The "hardware-project" layout is being used but page.types is missing "hardware-related" or "specific-project".</h3>
     {%- endif -%}
 </div>
