--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    {%- seo -%}
+
+    <!-- NOTE: SEO Include can be inserted here via the following string, excluding quotes: "{%- seo -%}"" -->
+    
     <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
     {%- feed_meta -%}
     {%- if jekyll.environment == 'production' and site.google_analytics -%}
