--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- NOTE: SEO Include can be inserted here via the following string, excluding quotes: "{%- seo -%}"" -->
+  <!-- NOTE: SEO Include can be inserted here -->
 
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
   
