Remove Redundant Layouts (blog-base, llc-base)
Removed the blog-base.html and llc-base.html files within /_layouts/, and replaced references of them with the default.html Layout instead.

Also updated the name of the class used by the main <div> tag in blog_home.html (changed from "llc-home" to "blog-home")

--- a/_layouts/blog-home.html
+++ b/_layouts/blog-home.html
@@ -1,8 +1,8 @@
 ---
-layout: blog-base
+layout: default
 ---
 
-<div class="llc-home">
+<div class="blog-home">
     
   {%- if page.blog-title -%}
     <h1 class="page-heading">{{ page.blog-title }}</h1>
