--- a/_includes/contact-info.html
+++ b/_includes/contact-info.html
@@ -11,3 +11,6 @@
 {%- if site.twitter_username -%}
 <p>Twitter: <a href="https://twitter.com/ {{- site.twitter_username -}} ">@ {{- site.twitter_username -}} </a></p>
 {%- endif -%}
+{%- if site.orcid_id -%}
+<p>ORCID: <a href="https://orcid.org/ {{- site.orcid_id -}} "> {{- site.orcid_id -}} </a></p>
+{%- endif -%}
