Fix Link Formatting in software-projects-table Include
Previously, the github-repo-owner page variable had not been implemented for software project link building. With this change, a local copy of the ryanbranch.github.io website should exhibit proper linking to the PyxDyn repository within the one example row present.

--- a/_includes/software-projects-table.html
+++ b/_includes/software-projects-table.html
@@ -38,7 +38,7 @@
                         {%- endif -%}
                     </td>
                     <td>
-                        <a class="page-link" href="http://github.com/{{- my_item.github-repo -}}">{{- my_item.github-repo | escape -}}</a>
+                        <a class="page-link" href="http://github.com/{{- my_item.github-repo-owner -}}/{{- my_item.github-repo -}}">{{- my_item.github-repo | escape -}}</a>
                     </td>
                 </tr>
             {%- endif -%}
