Add google_scholar_id Site Variable in contact-info.html Include
Added the option to link to a Google Scholar profile by including a "google_scholar_id" variable within a website's Jekyll _config.yml

--- a/_includes/contact-info.html
+++ b/_includes/contact-info.html
@@ -14,3 +14,6 @@
 {%- if site.orcid_id -%}
 <p>ORCID: <a href="https://orcid.org/ {{- site.orcid_id -}} "> {{- site.orcid_id -}} </a></p>
 {%- endif -%}
+{%- if site.google_scholar_id -%}
+<p>Google Scholar: <a href="https://scholar.google.com/citations?user= {{- site.google_scholar_id -}} ">Ryan Branch</a></p>
+{%- endif -%}
