Update contact-info.html Include
Updated Google Scholar to use the site.author variable instead of having my name hardcoded in the link text.
Also reformatted the whitespace to be more consistent, though I should eventually review this for the ENTIRE theme and not just this single file.

--- a/_includes/contact-info.html
+++ b/_includes/contact-info.html
@@ -1,19 +1,19 @@
 
 {%- if site.email -%}
-<p>Email: <a href="mailto: {{- site.email -}} "> {{- site.email -}} </a></p>
+  <p>Email: <a href="mailto: {{- site.email -}} "> {{- site.email -}} </a></p>
 {%- endif -%}
 {%- if site.github_username -%}
   <p>GitHub: <a href="https://github.com/ {{- site.github_username -}} "> {{- site.github_username -}} </a></p>
 {%- endif -%}
 {%- if site.linkedin_username -%}
-<p>LinkedIn: <a href="https://www.linkedin.com/in/ {{- site.linkedin_username -}} ">/in/ {{- site.linkedin_username -}} </a></p>
+  <p>LinkedIn: <a href="https://www.linkedin.com/in/ {{- site.linkedin_username -}} ">/in/ {{- site.linkedin_username -}} </a></p>
 {%- endif -%}
 {%- if site.twitter_username -%}
-<p>Twitter: <a href="https://twitter.com/ {{- site.twitter_username -}} ">@ {{- site.twitter_username -}} </a></p>
+  <p>Twitter: <a href="https://twitter.com/ {{- site.twitter_username -}} ">@ {{- site.twitter_username -}} </a></p>
 {%- endif -%}
 {%- if site.orcid_id -%}
-<p>ORCID: <a href="https://orcid.org/ {{- site.orcid_id -}} "> {{- site.orcid_id -}} </a></p>
+  <p>ORCID: <a href="https://orcid.org/ {{- site.orcid_id -}} "> {{- site.orcid_id -}} </a></p>
 {%- endif -%}
 {%- if site.google_scholar_id -%}
-<p>Google Scholar: <a href="https://scholar.google.com/citations?user= {{- site.google_scholar_id -}} ">Ryan Branch</a></p>
+  <p>Google Scholar: <a href="https://scholar.google.com/citations?user= {{- site.google_scholar_id -}} "> {{- site.author -}} </a></p>
 {%- endif -%}
