--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,6 +3,8 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="{{- site.description -}}">
+  <meta name="author" content="{{- site.author -}}">
 
   <!-- NOTE: SEO Include can be inserted here -->
 
