--- a/_includes/portfolio-header.html
+++ b/_includes/portfolio-header.html
@@ -16,7 +16,12 @@
         {%- if page.page-types contains "experience-related" -%}
           {{ site.right_arrow }} <a href="{{- site.permalink_experience -}}">Experience</a>
 
-          <!-- Experience-specific text -->
+          <!-- Research-specific text (LEVEL 3) -->
+          {%- if page.page-types contains "research-related" -%}
+            {{ site.right_arrow }} <a href="{{- site.permalink_research -}}">Research</a>
+          {%- endif -%}
+
+          <!-- Experience-specific text (LEVEL 3 or 4) -->
           {%- if page.page-types contains "specific-experience" -%}
             {{ site.right_arrow }} <a href="">{{ nav_text | escape }}</a>
           {%- endif -%}
