Implement site.github_gist in contact-info Include
Modified the contact-info.html Include to add a GitHub Gist link in parenthesis after the actual GitHub profile link.

NOTE: This commit is being pushed to the DEV branch instead of MAIN, as a simultaneous means of testing the non-public development environment.

--- a/_includes/contact-info.html
+++ b/_includes/contact-info.html
@@ -3,7 +3,11 @@
   <p>Email: <a href="mailto: {{- site.email -}} "> {{- site.email -}} </a></p>
 {%- endif -%}
 {%- if site.github_username -%}
-  <p>GitHub: <a href="https://github.com/ {{- site.github_username -}} "> {{- site.github_username -}} </a></p>
+  <p>GitHub: <a href="https://github.com/ {{- site.github_username -}} "> {{- site.github_username -}} </a>
+    {%- if site.github_gist -%}
+    (<a href="https://gist.github.com// {{- site.github_username -}} ">GitHub Gist</a>)
+    {%- endif -%}
+  </p>
 {%- endif -%}
 {%- if site.linkedin_username -%}
   <p>LinkedIn: <a href="https://www.linkedin.com/in/ {{- site.linkedin_username -}} ">/in/ {{- site.linkedin_username -}} </a></p>
