--- a/_includes/contact-info.html
+++ b/_includes/contact-info.html
@@ -5,7 +5,7 @@
 {%- if site.github_username -%}
   <p>GitHub: <a href="https://github.com/ {{- site.github_username -}} "> {{- site.github_username -}} </a>
     {%- if site.github_gist -%}
-    (<a href="https://gist.github.com// {{- site.github_username -}} ">GitHub Gist</a>)
+    &nbsp;&nbsp;&nbsp;&nbsp;(<a href="https://gist.github.com// {{- site.github_username -}} ">Gist</a>)
     {%- endif -%}
   </p>
 {%- endif -%}
