--- a/_sass/jekyanbranch/_syntax-highlighting.scss
+++ b/_sass/jekyanbranch/_syntax-highlighting.scss
@@ -10,14 +10,14 @@
     background: #eef;
   }
 
-  .c     { color: #888; font-style: italic } // Comment
+  .c     { color: #795; font-style: italic } // Comment
   .err   { color: #a61717; background-color: #e3d2d2 } // Error
-  .k     { color: #d83; font-weight: bold } // Keyword
+  .k     { color: #c8c; font-weight: bold } // Keyword
   .o     { color: #eef; font-weight: bold } // Operator
-  .cm    { color: #888; font-style: italic } // Comment.Multiline
-  .cp    { color: #888; font-weight: bold } // Comment.Preproc
-  .c1    { color: #888; font-style: italic } // Comment.Single
-  .cs    { color: #888; font-weight: bold; font-style: italic } // Comment.Special
+  .cm    { color: #795; font-style: italic } // Comment.Multiline
+  .cp    { color: #795; font-weight: bold } // Comment.Preproc
+  .c1    { color: #795; font-style: italic } // Comment.Single
+  .cs    { color: #5ad; font-weight: bold; font-style: italic } // Comment.Special
   .gd    { color: #ccf; background-color: #fbb } // Generic.Deleted
   .gd .x { color: #ccf; background-color: #f88 } // Generic.Deleted.Specific
   .ge    { color: #eef; font-style: italic } // Generic.Emph
@@ -26,27 +26,27 @@
   .gi    { color: #ccf; background-color: #ddb } // Generic.Inserted
   .gi .x { color: #ccf; background-color: #ad8 } // Generic.Inserted.Specific
   .go    { color: #888 } // Generic.Output
-  .gp    { color: #555 } // Generic.Prompt
+  .gp    { color: #FD3 } // Generic.Prompt
   .gs    { color: #eef; font-weight: bold } // Generic.Strong
   .gu    { color: #aaa } // Generic.Subheading
   .gt    { color: #a00 } // Generic.Traceback
-  .kc    { color: #eef; font-weight: bold } // Keyword.Constant
-  .kd    { color: #eef; font-weight: bold } // Keyword.Declaration
-  .kp    { color: #eef; font-weight: bold } // Keyword.Pseudo
-  .kr    { color: #eef; font-weight: bold } // Keyword.Reserved
-  .kt    { color: #5ad; font-weight: bold } // Keyword.Type
-  .m     { color: #099 } // Literal.Number
-  .s     { color: #786 } // Literal.String
-  .na    { color: #008080 } // Name.Attribute
+  .kc    { color: #5cf; font-weight: bold } // Keyword.Constant
+  .kd    { color: #5db; font-weight: bold } // Keyword.Declaration
+  .kp    { color: #5db; font-weight: bold } // Keyword.Pseudo
+  .kr    { color: #5db; font-weight: bold } // Keyword.Reserved
+  .kt    { color: #5db; font-weight: bold } // Keyword.Type
+  .m     { color: #bdb } // Literal.Number
+  .s     { color: #eeb } // Literal.String
+  .na    { color: #aef } // Name.Attribute
   .nb    { color: #99c } // Name.Builtin
-  .nc    { color: #458; font-weight: bold } // Name.Class
-  .no    { color: #008080 } // Name.Constant
+  .nc    { color: #5db; font-weight: bold } // Name.Class
+  .no    { color: #5cf } // Name.Constant
   .ni    { color: #800080 } // Name.Entity
   .ne    { color: #900; font-weight: bold } // Name.Exception
-  .nf    { color: #fc7; font-weight: bold } // Name.Function
-  .nn    { color: #555 } // Name.Namespace
-  .nt    { color: #000080 } // Name.Tag
-  .nv    { color: #008080 } // Name.Variable
+  .nf    { color: #dda; font-weight: bold } // Name.Function
+  .nn    { color: #5db } // Name.Namespace
+  .nt    { color: #5ad } // Name.Tag
+  .nv    { color: #aef } // Name.Variable
   .ow    { color: #eef; font-weight: bold } // Operator.Word
   .w     { color: #bbb } // Text.Whitespace
   .mf    { color: #79b } // Literal.Number.Float
@@ -65,8 +65,8 @@
   .s1    { color: #d14 } // Literal.String.Single
   .ss    { color: #990073 } // Literal.String.Symbol
   .bp    { color: #959 } // Name.Builtin.Pseudo
-  .vc    { color: #008080 } // Name.Variable.Class
-  .vg    { color: #008080 } // Name.Variable.Global
-  .vi    { color: #008080 } // Name.Variable.Instance
+  .vc    { color: #aef } // Name.Variable.Class
+  .vg    { color: #5cf } // Name.Variable.Global
+  .vi    { color: #aef } // Name.Variable.Instance
   .il    { color: #099 } // Literal.Number.Integer.Long
 }
