Minor Formatting Changes for Blogposts
Made one additional change to code syntax highlighting, as an extension of the previous commit.

Also extended the .post-content section of _layout.scss by adding a section specifically for <ul> amd <ol> tags, which applies the padding-left style with a value of 30 pixels. This has "stacking" effects, so not only the first but also all subsequent sections will experience further indent depending on their level of list depth.

--- a/_sass/jekyanbranch/_syntax-highlighting.scss
+++ b/_sass/jekyanbranch/_syntax-highlighting.scss
@@ -47,7 +47,7 @@
   .nn    { color: #5db } // Name.Namespace
   .nt    { color: #5ad } // Name.Tag
   .nv    { color: #aef } // Name.Variable
-  .ow    { color: #eef; font-weight: bold } // Operator.Word
+  .ow    { color: #c8c; font-weight: bold } // Operator.Word
   .w     { color: #bbb } // Text.Whitespace
   .mf    { color: #79b } // Literal.Number.Float
   .mh    { color: #79b } // Literal.Number.Hex
