Fix Horizontal Shift in Short Pages
NOTE: This commit is meant to be a fix for Issue ""About" Page and Blogpost Pages are Off-Center" (https://github.com/ryanbranch/ryanbranch.github.io/issues/4) from ryanbranch/ryanbranch.github.io

NOTE: The main work in this commit is based on a StackOverflow answer at:
https://stackoverflow.com/a/30293718

Inserted a new wrapper <div> tag which encloses any content using the default.html Layout. In such cases where the scroll bar is not present, its horizontal effects should now be accounted for and all pages should now match.

This commit also includes a few minor changes to other layouts, mainly related to spacing and the standardization of <div> nesting depth.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,15 +5,19 @@
 
   <body>
 
-    {%- include header.html -%}
+    <div style="padding-left: calc(100vw - 100%);">
 
-    <main class="page-content" aria-label="Content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
-    </main>
+      {%- include header.html -%}
 
-    {%- include footer.html -%}
+      <main class="page-content" aria-label="Content">
+        <div class="wrapper">
+          {{ content }}
+        </div>
+      </main>
+
+      {%- include footer.html -%}
+
+    </div>
 
   </body>
 
