Fix Whitespace in post.html Layout
In testing the most recent commit to dev, it has become apparent that the generated html does not contain a space between the word "on" and the date (within Blogpost headings).

This commit attempts to fix the issue via a nonbreaking space character.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,13 +12,13 @@ layout: default
 		{%- endif -%}</p>
 		<p class="post-meta">
 		  {%- if page.author -%}
-			Written by <strong><span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card" itemprop="name">{{ page.author }}</span></span></strong> on 
+			Written by <strong><span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card" itemprop="name">{{ page.author }}</span></span></strong> on
 		  {%- elsif site.author -%}
-		    Written by <strong><span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card" itemprop="name">{{ site.author }}</span></span></strong> on 
+		    Written by <strong><span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card" itemprop="name">{{ site.author }}</span></span></strong> on
 		  {%- endif -%}
 		  <time class="dt-published" datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
 			{%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
-			<strong>{{ page.date | date: date_format }}</strong>
+			<strong>&nbsp;{{ page.date | date: date_format }}</strong>
 		  </time>
 		</p>
 	  </header>
