--- a/_includes/form-privacy.html
+++ b/_includes/form-privacy.html
@@ -39,13 +39,13 @@ method="POST"
   <tr>
     <td>Request a copy of your personal data&nbsp;&#9;</td>
     <td>
-      <input type="checkbox" id="copy" name="copy" value="Copy">
+      <input type="checkbox" id="copy" name="Copy" value="YES">
     </td>
   </tr>
   <tr>
     <td>Request the deletion of your personal data&nbsp;&#9;</td>
     <td>
-      <input type="checkbox" id="delete" name="delete" value="Delete">
+      <input type="checkbox" id="delete" name="Delete" value="YES">
     </td>
   </tr>
 </table>
