--- a/_includes/form-contact.html
+++ b/_includes/form-contact.html
@@ -35,7 +35,13 @@ method="POST"
     <td>
       <textarea name="Message" required></textarea>
     </td>
-  </tr>  
+  </tr>
+  <tr>
+    <td>I agree to the <a href="/privacy/"><strong>Privacy Policy</strong></a>&nbsp;&#9;</td>
+    <td>
+      <input type="checkbox" id="delete" name="Delete" value="YES" required>
+    </td>
+  </tr>
 </table>
 <input type="submit" value="Send">
 </form>
