--- a/_layouts/blog-home.html
+++ b/_layouts/blog-home.html
@@ -23,9 +23,13 @@ layout: default
                 {{ post.title | escape }}
               </a>
             </h3>
+            {%- if post.subtitle -%}
+              <span class="post-meta">{{ post.subtitle }}</span>
+            {%- endif -%}
             {%- if site.show_excerpts -%}
               {{ post.excerpt }}
             {%- endif -%}
+            <br />
           </li>
         {%- endunless -%}
       {%- endfor -%}
