Remove "Delete" from form-contact.html Include
This will be a solution to Issue #16 once it has been rolled out into the production build.

--- a/_includes/form-contact.html
+++ b/_includes/form-contact.html
@@ -39,7 +39,7 @@ method="POST"
   <tr>
     <td>I agree to the <a href="/privacy/"><strong>Privacy Policy</strong></a>&nbsp;&#9;</td>
     <td>
-      <input type="checkbox" id="delete" name="Delete" value="YES" required>
+      <input type="checkbox" id="privacy" name="Privacy" value="YES" required>
     </td>
   </tr>
 </table>
