--- a/_includes/portfolio-table.html
+++ b/_includes/portfolio-table.html
@@ -2,11 +2,43 @@
 <div class="wrapper">
     {%- assign portfolio_item_paths = site.portfolio_items | map: "path" -%}
     <div class="page-nav-col-wrapper">
-      <h2 class="page-nav-heading"><a class="page-link" href="{{- site.permalink_experience -}}">Experience</a></h2>
+      <h2 class="page-nav-heading">Background</h2>
       <ul class="page-nav-list">
         {%- for path in portfolio_item_paths -%}
           {%- assign my_item = site.portfolio_items | where: "path", path | first -%}
-          {%- if my_item.title and my_item.page-types contains "experience-related" and my_item.page-types contains "specific-experience"  -%}
+          {%- if my_item.title and my_item.page-types contains "background-information"  -%}
+            {%- assign link_text = my_item.title -%}
+            {%- if my_item.nav-title -%}
+              {%- assign link_text = my_item.nav-title -%}
+            {%- endif -%}
+            <li class="p-name">
+              <a class="page-link" href="{{ my_item.url | relative_url }}">{{ link_text | escape }}</a>
+            </li>
+          {%- endif -%}
+        {%- endfor -%}
+      </ul>
+
+      <h2 class="page-nav-heading"><a class="page-link" href="{{- site.permalink_research -}}">Research</a></h2>
+      <ul class="page-nav-list">
+        {%- for path in portfolio_item_paths -%}
+          {%- assign my_item = site.portfolio_items | where: "path", path | first -%}
+          {%- if my_item.title and my_item.page-types contains "research-related" and my_item.page-types contains "specific-experience"  -%}
+            {%- assign link_text = my_item.title -%}
+            {%- if my_item.nav-title -%}
+              {%- assign link_text = my_item.nav-title -%}
+            {%- endif -%}
+            <li class="p-name">
+              <a class="page-link" href="{{ my_item.url | relative_url }}">{{ link_text | escape }}</a>
+            </li>
+          {%- endif -%}
+        {%- endfor -%}
+      </ul>
+
+      <h2 class="page-nav-heading"><a class="page-link" href="{{- site.permalink_employment -}}">Employment</a></h2>
+      <ul class="page-nav-list">
+        {%- for path in portfolio_item_paths -%}
+          {%- assign my_item = site.portfolio_items | where: "path", path | first -%}
+          {%- if my_item.title and my_item.page-types contains "employment-related" and my_item.page-types contains "specific-experience"  -%}
             {%- assign link_text = my_item.title -%}
             {%- if my_item.nav-title -%}
               {%- assign link_text = my_item.nav-title -%}
