Begin Addition of Social Icons into Footer
Modified the social.html include to remove most content, other than that which uses the following three site variables:
github_username
linkedin_username
rss

Also modified footer.html to include the social.html Include directly below the copyright line.

Committing to dev in order to test locally before pushing to the live site.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -52,6 +52,7 @@
     </div>
     <hr class="footer-col-hr"/>
     <h2 class="footer-heading">&#169; {{ 'now' | date: "%Y" }} Ryan Branch</h2>
+    {%- include social.html -%}
 
   </div>
 
