--- a/_includes/social.html
+++ b/_includes/social.html
@@ -1,6 +1,9 @@
 
-<ul class="social-media-list">
-  {%- if site.github_username -%}<li><a href="https://github.com/{{ site.github_username| cgi_escape | escape }}"><svg class="svg-icon"><use xlink:href="{{ '/assets/minima-social-icons.svg#github' | relative_url }}"></use></svg> <span class="username">{{ site.github_username| escape }}</span></a></li>{%- endif -%}
-  {%- if site.linkedin_username -%}<li><a href="https://www.linkedin.com/in/{{ site.linkedin_username| cgi_escape | escape }}"><svg class="svg-icon"><use xlink:href="{{ '/assets/minima-social-icons.svg#linkedin' | relative_url }}"></use></svg> <span class="username">{{ site.linkedin_username| escape }}</span></a></li>{%- endif -%}
-  {%- if site.rss -%}<li><a href="{{ 'feed.xml' | relative_url }}"><svg class="svg-icon"><use xlink:href="{{ '/assets/minima-social-icons.svg#rss' | relative_url }}"></use></svg> <span>{{ site.rss | escape }}</span></a></li>{%- endif -%}
+<div class="social-media-icons">
+  {%- if site.github_username and site.permalink_icon_github -%}
+    <a href="https://github.com/{{ site.github_username| cgi_escape | escape }}"><img class="icon-link-footer" src="{{- site.permalink_icon_github -}}" alt="Link to Ryan Branch's Profile on GitHub"></img></a>
+  {%- endif -%}
+  {%- if site.linkedin_username and site.permalink_icon_linkedin -%}
+    <a href="https://www.linkedin.com/in/{{ site.linkedin_username| cgi_escape | escape }}"><img class="icon-link-footer" src="{{- site.permalink_icon_linkedin -}}" alt="Link to Ryan Branch's Profile on LinkedIn"></img></a>
+  {%- endif -%}
 </ul>
