Update <img> Styles in _base.scss
Added a new style class, icon-link-footer, for the <img> tag.

Sets footer icon sizes to 64px width and height.

--- a/_sass/jekyanbranch/_base.scss
+++ b/_sass/jekyanbranch/_base.scss
@@ -57,7 +57,14 @@ main {
 img {
   max-width: 100%;
   vertical-align: middle;
+
+  .icon-link-footer {
+    width: 64px;
+    height: 64px;
+  }
 }
+
+
 
 
 
