Additional SCSS Modifications
Created a "social-media-icons" Style in _layout.scss

Also, within _base.scss, updated the padding-left and padding-right properties of the icon-link-footer Style added in the previous commit

--- a/_sass/jekyanbranch/_base.scss
+++ b/_sass/jekyanbranch/_base.scss
@@ -61,6 +61,8 @@ img {
   .icon-link-footer {
     width: 64px;
     height: 64px;
+    padding-left: $spacing-unit / 2;
+    padding-right: $spacing-unit / 2;
   }
 }
 
