--- a/_sass/jekyanbranch/_layout.scss
+++ b/_sass/jekyanbranch/_layout.scss
@@ -201,10 +201,18 @@
 }
 
 
+/**
+ * social-media-icons (All new to ryanbranch/jekyanbranch)
+ */
+.social-media-icons {
+  text-align: center;
+  margin-bottom: $spacing-unit / 2;
+  padding-left: $spacing-unit / 2;
+}
 
 
 /**
- * Site page-nav (All new to ryanbranch/jekyanbranch)
+ * site-page-nav (All new to ryanbranch/jekyanbranch)
  */
  .site-page-nav {
   border-top: 1px solid $grey-color-light;
