Move "icon-link-footer" Style from _base.scss to _layout.scss

--- a/_sass/jekyanbranch/_layout.scss
+++ b/_sass/jekyanbranch/_layout.scss
@@ -212,6 +212,17 @@
 
 
 /**
+ * icon-link-footer (All new to ryanbranch/jekyanbranch)
+ */
+.icon-link-footer {
+  width: 64px;
+  height: 64px;
+  padding-left: $spacing-unit / 2;
+  padding-right: $spacing-unit / 2;
+}
+
+
+/**
  * site-page-nav (All new to ryanbranch/jekyanbranch)
  */
  .site-page-nav {
