--- a/_includes/social.html
+++ b/_includes/social.html
@@ -6,4 +6,4 @@
   {%- if site.linkedin_username and site.permalink_icon_linkedin -%}
     <a href="https://www.linkedin.com/in/{{ site.linkedin_username| cgi_escape | escape }}"><img class="icon-link-footer" src="{{- site.permalink_icon_linkedin -}}" alt="Link to Ryan Branch's Profile on LinkedIn"></img></a>
   {%- endif -%}
-</ul>
+</div>
