Update post.html Layout (into dev)
NOTE: This is a DEVELOPMENT commit, being pushed to the "dev" branch.

Modified display of the page.subtitle variable to use <h4> tags instead of <h3>. Also fixed a minor formatting error related to a redundant <p> tag, and made some small tweaks to whitespace in the rendered page layout.

Each SCSS file has had some minor changes, in order to facilitate more variety of whitespace placement.

Also modified _layout.scss to use different values for relative-font-size() in the "post-subtitle" Style

Lastly, updated jekyanbranch.scss to include a new line-spacing-percent variable.

--- a/_sass/jekyanbranch.scss
+++ b/_sass/jekyanbranch.scss
@@ -19,7 +19,9 @@ $header-nav-font-size-multiplier: 1.375 !default;
 $header-nav-font-family: '"Roboto", Arial, Helvetica, sans-serif';
 $header-nav-font-family: unquote($header-nav-font-family + ', ' + $base-font-family);
 
-$spacing-unit:     10px !default;
+$spacing-unit:         10px !default;
+// Additional Units (NEW TO JEKYANBRANCH)
+$line-spacing-percent:    175% !default;
 
 $text-color:       #111 !default;
 $background-color: #fdfdfd !default;
