--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,14 +8,15 @@ layout: default
 	  <header class="post-header">
 		<h1 class="post-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
 		{%- if page.subtitle -%}
-		<h3 class="post-subtitle p-name" itemprop="name subheadline">{{ page.subtitle | escape }}</h3>
-		{%- endif -%}</p>
+		<h4 class="post-subtitle p-name" itemprop="name subheadline">{{ page.subtitle | escape }}</h4>
+		{%- endif -%}
 		<p class="post-meta">
 		  {%- if page.author -%}
 			Written by <strong><span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card" itemprop="name">{{ page.author }}</span></span></strong> on
 		  {%- elsif site.author -%}
 		    Written by <strong><span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card" itemprop="name">{{ site.author }}</span></span></strong> on
 		  {%- endif -%}
+		  <hr class="hr-hidden-br-half" />
 		  <time class="dt-published" datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
 			{%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
 			<strong>&nbsp;{{ page.date | date: date_format }}</strong>
@@ -24,6 +25,8 @@ layout: default
 	  </header>
 
 	  <div class="post-content e-content" itemprop="articleBody">
+		<hr class="hr-post-header" />
+		<br />
 		{{ content }}
 	  </div>
 
