--- a/_includes/captcha-body.html
+++ b/_includes/captcha-body.html
@@ -1,6 +1,6 @@
 
-{%- if site.captcha-public-key -%}
+{%- if site.captcha_public_key -%}
 <!-- CAPTCHA - reCAPTCHA (BODY) -->
-<div class="g-recaptcha" data-sitekey="{{ site.captcha-public-key }}"></div>
+<div class="g-recaptcha" data-sitekey="{{ site.captcha_public_key }}"></div>
 <!-- End CAPTCHA -->
 {%- endif -%}
