--- a/_layouts/llc-home.html
+++ b/_layouts/llc-home.html
@@ -6,6 +6,8 @@ layout: default
     
   {%- if page.llc-title -%}
     <h1 class="page-heading">{{ page.llc-title }}</h1>
+  {%- else -%}
+    <h1 class="page-heading">{{ page.title }}</h1>
   {%- endif -%}
   
   {{ content }}
